[package]
edition = "2021"
name = "shined_package-exported-usage"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4","serde-json","async"] }
napi-derive = "2.12.2"
serde_json = "1.0"
serde ={ version = "1.0", features = ["derive"] }
wax = "0.6.0"
rayon = "1.10"
oxc_allocator = {version = "0.13.1"}
oxc_parser = {version = "0.13.1"}
oxc_span = {version = "0.13.1"}
oxc_ast = {version = "0.13.1"}

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
